tests/snapshots/integration__validate__help_version.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog help

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

EOF
exit 0

# RUN_OUTPUT
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

************ RUN ************
prog --help

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

EOF
exit 0

# RUN_OUTPUT
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

************ RUN ************
prog -help

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

EOF
exit 0

# RUN_OUTPUT
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

************ RUN ************
prog -h

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

EOF
exit 0

# RUN_OUTPUT
prog 1.0.0
nobody <nobody@example.com>
Test argc

USAGE: prog

************ RUN ************
prog --version

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
EOF
exit 0

# RUN_OUTPUT
prog 1.0.0

************ RUN ************
prog -version

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
EOF
exit 0

# RUN_OUTPUT
prog 1.0.0

************ RUN ************
prog -V

# OUTPUT
command cat >&2 <<-'EOF' 
prog 1.0.0
EOF
exit 0

# RUN_OUTPUT
prog 1.0.0


