tests/snapshots/integration__validate__param_missing.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog

# OUTPUT
command cat >&2 <<-'EOF' 
error: the following required arguments were not provided:
  --ao <AO>
EOF
exit 1

# BUILD_OUTPUT
error: the required arguments `<VAL>` were not provided
