tests/snapshots/integration__validate__version.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog --version

OUTPUT
command cat >&2 <<-'EOF' 
prog 0.0.0
EOF
exit 0

************ RUN ************
prog cmd --version

OUTPUT
argc__args=( prog cmd --version )
argc__cmd_arg_index=1
argc__fn=cmd
argc__positionals=( --version )
cmd --version


